server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-grpc-headless-service-server
  labels:
    app.kubernetes.io/name: go-grpc-headless-service-server
    name: go-grpc-headless-service-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: go-grpc-headless-service-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-grpc-headless-service-server
    spec:
      restartPolicy: Always
      containers:
      - name: go-grpc-headless-service-server
        image: ${ARTIFACT_REGION}-docker.pkg.dev/${ARTIFACT_PROJECT_ID}/go-grpc-headless-service-server/dev:latest
        imagePullPolicy: Always
        ports:
          - name: tcp
            containerPort: 8080
        livenessProbe:
         grpc:
           port: 8080
         initialDelaySeconds: 5
         periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: go-grpc-headless-service-server
  labels:
    app.kubernetes.io/name: go-grpc-headless-service-server
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: go-grpc-headless-service-server
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
